--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -11,4 +11,5 @@ jobs:
       - name: "hello-action"
         uses: ./.github/actions/hello-world
         with:
-          first-greeting: Hello Prudvi
+          first-greeting: "Hello Prudvi"
+          third-greeting: "Hello Prudvi"
